# remoteq

./: CMakeLists.txt  README.md  acceptor.h  binarystream.h  channel.h  close.h  detail.cpp  endpoint.h  queue.h  readme.txt  remote_queue.h  typedef.h
ipv4/tcp/windows/: acceptor.h  acceptorimpl.cpp  acceptorimpl.h  channel.h  channelimpl.cpp  channelimpl.h  queueimpl.h
ipv4/udp/windows/: acceptor.h  acceptorimpl.cpp  acceptorimpl.h  channel.h  channelimpl.cpp  channelimpl.h  queueimpl.h
ipv4/windows/: acceptor.h  acceptorimpl.h  channel.h  channelimpl.h  endpointimpl.cpp  endpointimpl.h
windows/: close.cpp  handle.h  overlapped.h  queueimpl.cpp  queueimpl.h  wsainit.cpp  wsainit.h
